Updated content in cores_attributes .txt and .html files. Updated comments in smithing_texts_index.html. Added temper_tables_index.html.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -1962,7 +1962,9 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Reduced Movement (Ranged Weapon Hit) 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Reduced Movement</span>
+                        <span class="text-rare-text-color">(Ranged Weapon Hit)</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1976,7 +1978,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Damage Taken (Mid Attack) 
+                        <span class="text-exotic-text-color">Damage Taken (Mid-Attack)</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1997,7 +1999,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Paralysis Resistance 
+                        <span class="text-exotic-text-color">Paralysis Resistance</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2065,14 +2067,14 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Elixir Efficacy 
+                        <span class="text-rare-text-color">Elixir Efficacy</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Enhanced Kodama Blessings 
+                        <span class="text-rare-text-color">Enhanced Kodama Blessings</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2093,14 +2095,15 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Faster Movement (Amrita Absorption) 
+                        <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Faster Movement</span> (Amrita Absorption) 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Elemental Damage Taken 
+                        <span class="text-exotic-text-color">Elemental Damage Taken</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2123,7 +2126,9 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Increased Defense (Amrita Absorption) 
+                        <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Increased Defense</span>
+                        <span class="text-uncommon-text-color">(Amrita Absorption)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2137,21 +2142,23 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Life Recovery (Amrita Absorption) 
+                        <span class="text-rare-text-color">Life Recovery (Amrita Absorption)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Shock Accumulation (Enemy) 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Shock</span>
+                        <span class="text-exotic-text-color">Accumulation (Enemy)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Life Drain (Lightning Attack) 
+                        <span class="text-rare-text-color">Life Drain (Lightning Attack)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2165,14 +2172,15 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Untouched Ninjutsu 
+                        <span class="text-uncommon-text-color">Untouched Ninjutsu</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Purified Accumulation (Enemy) 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Purified</span> Accumulation (Enemy) 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2186,56 +2194,63 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Life Drain (Fire Attack) 
+                        <span class="text-rare-text-color">Life Drain (Fire Attack)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Thrust Damage 
+                        Thrust Damage
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Increased Attack (Enemy Killed) 
+                        <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Increased Attack</span>
+                        <span class="text-exotic-text-color">(Enemy Killed)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Untouched Tengu's Fan 
+                        Untouched Tengu's Fan
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Increased Attack (Amrita Absorption) 
+                        <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Increased Attack</span>
+                        <span class="text-exotic-text-color">(Amrita Absorption)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Corrupted Accumulation (Enemy) 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Corrupted</span> Accumulation (Enemy)
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Increased Defense (Winded Enemy) 
+                        <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Increased Defense</span>
+                        <span class="text-exotic-text-color">(Winded Enemy)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Anima Bonus (Awakened Weapon) 
+                        <span class="text-uncommon-text-color">Anima Charge (Awakened Weapon)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
