--- a/nioh2/tools/temper_tables/temper_tables_index.html
+++ b/nioh2/tools/temper_tables/temper_tables_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Smithing Texts in Nioh 2</title>
+    <title>Temper Tables in Nioh 2</title>
     <!-- ========== ========== ==========
     Google Fonts (Asul)
     ========== ========== ========== -->
@@ -230,75 +230,11 @@
     ========== ========== ========== ========== ========== -->
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
-            <h1 class="text-yellow-400 text-5xl md:text-6xl">Smithing Texts</h1>
+            <h1 class="text-yellow-400 text-5xl md:text-6xl">Temper Tables</h1>
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
 
-
-    <!-- ========== ========== ========== ========== ==========
-    Card Section
-    ========== ========== ========== ========== ========== -->
-    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
-        <div class="w-full px-4 py-6 flex flex-col justify-center items-center gap-6 rounded
-            2xl:max-w-section-width lg:px-16">
-
-            <div class="w-full flex flex-wrap gap-6
-                md:grid md:grid-cols-2
-                2xl:grid 2xl:grid-cols-3">
-
-                <!-- ==========
-                Hidden Skills (Button 1)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/hidden_skills.html">
-                    <img class="h-[75px] w-auto" src="./img/hidden_skill_icon.png" alt="Hidden Skills Skill Tree icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Hidden Skills</span>
-                </a>
-
-                <!-- ==========
-                Weapon Smithing Texts (Button 2)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/weapon_texts.html">
-                    <img class="my-auto" src="./img/weapons_icon.png" alt="Weapons icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Weapon Smithing Texts</span>
-                </a>
-
-                <!-- ==========
-                Armor Smithing Texts (Button 3)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/armor_texts.html">
-                    <img class="my-auto" src="./img/armor_icon.png" alt="Armor icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Armor Smithing Texts</span>
-                </a>
-
-                <!-- ==========
-                Misc Smithing Texts (Button 4)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/smithing_texts/misc_texts.html">
-                    <img class="my-auto" src="./img/misc_smithing_icon.png" alt="Blacksmith Hammer icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Misc Smithing Texts</span>
-                </a>
-
-                <!-- ==========
-                Mission Progression Unlocks (Button 5)
-                ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
-                    <img class="h-[75px] w-auto" src="./img/missions_logo.png" alt="Main Mission icon">
-                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
-                        group-hover:text-yellow-100 group-hover:bg-light-red">Mission Progression Unlocks</span>
-                </a>
-            </div>
-        </div>
-    </section>
 
     <!-- ========== ========== ========== ========== ==========
     JavaScript
