--- a/nioh2/tools/temper_tables/temper_tables_index.html
+++ b/nioh2/tools/temper_tables/temper_tables_index.html
@@ -237,6 +237,101 @@
 
 
     <!-- ========== ========== ========== ========== ==========
+    Card Section
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-4 py-6 flex flex-col justify-center items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <div class="w-full flex flex-wrap gap-6
+                md:grid md:grid-cols-2
+                2xl:grid 2xl:grid-cols-3">
+
+                <!-- ==========
+                Melee Temper Table (Button 1)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/weapons_icon.png" alt="Weapons icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Melee Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Ranged Temper Table (Button 2)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/ranged_weapons_icon.png" alt="Ranged Weapons icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Ranged Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Accessories Temper Table (Button 3)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/accessories_icon.png" alt="Accessories icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Accessories Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Helmet Temper Table (Button 4)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/helmet_icon.png" alt="Helmet icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Helmet Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Torso Temper Table (Button 5)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/torso_icon.png" alt="Torso icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Torso Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Gloves Temper Table (Button 6)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/gloves_icon.png" alt="Gloves icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Gloves Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Waist Temper Table (Button 7)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/waist_icon.png" alt="Waist icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Waist Temper Table</span>
+                </a>
+
+                <!-- ==========
+                Boots Temper Table (Button 8)
+                ========== -->
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                    href="">
+                    <img class="" src="./img/boots_icon.png" alt="Boots icon">
+                    <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
+                        group-hover:text-yellow-100 group-hover:bg-light-red">Boots Temper Table</span>
+                </a>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
     JavaScript
     ========== ========== ========== ========== ========== -->
     <!-- FlowBite JavaScript -->
