Updated the href links for the temper_table_index.html page in nioh2 and tools_index .html files.

--- a/nioh2/tools/tools_index.html
+++ b/nioh2/tools/tools_index.html
@@ -260,7 +260,7 @@
                 Temper Tables (Button 2)
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="https://liukang1080.github.io/gamewiki/nioh2/tools/temper_tables/temper_tables_index.html">
                     <span class="mask w-full p-2 justify-self-end text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Temper Tables</span>
                 </a>
