Fixed spelling errors in cores_attributes .html and .txt files. Added a new file weapon_tables.html.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -742,7 +742,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
-                        <span class="text-rare-text-color">Anima Charge Bonus (Amrita Guage)</span>
+                        <span class="text-rare-text-color">Anima Charge Bonus (Amrita Gauge)</span>
                     </td>
                     <td>C+</td>
                     <td>B</td>
@@ -751,7 +751,7 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Anima Charge Bonus (Amrita Guage)</td>
+                    <td>Anima Charge Bonus (Amrita Gauge)</td>
                     <td>B</td>
                     <td>A-</td>
                     <td>A+</td>
