Updated content in picture_scrolls.html and picture_scrolls_attributes.txt.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -360,16 +360,6 @@
                     <span><span class="text-red-600 font-bold">Scrolls of the Damned:</span> Underworld Depths (Floors 1 - 30) (Only bosses drop Scrolls of the Damned)</span>
                 </div>
             </p>
-
-            <!-- ==========
-            Other Notes
-            ==========-->
-            <h2 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Other Notes</h2>
-            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                <span class="text-red-600 font-bold">Special Rules Note:</span> For Lucky Drop [X Grace] all 18 Ethereal Graces can drop, except for
-                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Oyamatsumi</span> and 
-                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Shinatsuhiko</span>.
-            </p>
         </div>
     </section>
 
@@ -678,10 +668,6 @@
                     <td>-25.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Amrita Earned</td>
-                    <td>10.0 %</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
                     <td>Amrita Gauge Charge</td>
                     <td>10.0 %</td>
                 </tr>
@@ -696,6 +682,12 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>Elemental Damage Taken (Guarding)</td>
                     <td>-15.0 %</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="text-uncommon-text-color">Amrita Earned</span>
+                    </td>
+                    <td>10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-uncommon-text-color">Anima Charge</span></td>
@@ -799,15 +791,34 @@
                 Table Data
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned Up</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Divine+ Item Drop Rate</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Gold Earned Up</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
                     <td>Lucky Drop (GRACE)</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Lucky Drop Transferable Effects</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Divine+ Item Drop Rate</td>
+                    <td>Soul Core Drop Rate Up</td>
                 </tr>
             </table>
+
+            <!-- ==========
+            Other Notes
+            ==========-->
+            <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                <span class="text-red-600 font-bold">Special Rules Note:</span> For Lucky Drop (GRACE) all 18 Ethereal Graces can drop. The Graces from the Depths:
+                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Oyamatsumi</span> and 
+                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Grace of Shinatsuhiko</span> 
+                cannot be rolled as a Special Rule.
+            </p>
         </div>
     </section>
 
