--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -236,6 +236,157 @@
     </section>
 
 
+    <!-- ========== ========== ========== ========== ==========
+    Table of Contents
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 flex flex-col items-center">
+        <div class="2xl:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start">
+            <ol class="list-decimal list-inside text-xl text-sky-400">
+                <li><a class="hover:text-sky-600" href="javascript: nioh_gear()">Dream of the Nioh Starred Attributes</a></li>
+                <li><a class="hover:text-sky-600" href="javascript: credits()">Credits</a></li>
+            </ol>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Standard Gear Attribute Tables
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 lg:px-0 flex flex-col items-center">
+        <div class="w-full px-2 py-6 flex flex-col items-center gap-6 rounded
+            2xl:max-w-section-width lg:px-16">
+
+            <!-- ==========
+            section header
+            ========== -->
+            <h2 id="standard-gear" class="py-4 text-4xl text-yellow-400 font-extrabold text-center">Standard Gear Attribute Tables</h2>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+
+            <p class="px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
+                Attributes within a table conflict with other attributes in that same table. Attributes in the No Conflict Table 
+                do not conflict with each other. 
+            </p>
+
+            <!-- ==========
+            Random Drop / Forge Only
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Random Drop / Forge Only <span class="text-red-600">(Conflicts with other Imbue Stats)</span></h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">Inheritable?</th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="text-exotic-text-color">Imbue Purity</span>
+                    </td>
+                    <td>6</td>
+                    <td>8</td>
+                    <td>No</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <span class="text-exotic-text-color">Imbue Corruption</span>
+                    </td>
+                    <td>6</td>
+                    <td>8</td>
+                    <td>No</td>
+                </tr>
+            </table>
+
+            <!-- ==========
+            Life Drain
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Life Drain</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">Inheritable?</th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                
+            </table>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Credits
+    ========== ========== ========== ========== ========== -->
+    <section class="w-full my-12 flex flex-col items-center">
+        <div class="lg:max-w-section-width w-full px-4 2xl:px-0 flex flex-col items-start gap-4">
+            <h1 id="credits" class="text-yellow-400 text-4xl">Credits:</h1>
+            <hr class="w-full h-[2px] bg-stone-600 border-0">
+            
+            <div class="flex flex-col gap-2 text-slate-300 text-xl">
+                <span>LiuKang1080, Oninomiru</span>
+
+                <span class="bold-text">
+                    <a class="text-sky-400 hover:text-sky-600" href="https://docs.google.com/spreadsheets/d/1A-uFgSck8pU5NOLh2OVpK_V5-AVfDW42wuiumuf7tlE/edit#gid=137724816"
+                    target="_blank" rel="noopener noreferrer">Ocean Machine's Nioh 2 Build Bible</a>
+                </span>
+
+                <span class="bold-text">Nioh Community Discord Server: 
+                    <a class="text-sky-400 hover:text-sky-600" href="https://discord.gg/pAH5U9mRBj" 
+                    target="_blank" rel="noopener noreferrer">Here</a></span>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    Back to top button
+    ========== ========== ========== ========== ========== -->
+    <a id="back-to-top-button" href="#">Top</a>
+
+
+    <!-- ========== ========== ========== ========== ==========
+    JavaScript
+    ========== ========== ========== ========== ========== -->
+    <!-- FlowBite JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
+
+    <!-- ==========
+    Local JavaScript
+    ========== -->
+    <!-- Navbar JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/navbar.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/navbar.js" defer></script> -->
+
+    <!-- Top Button JS -->
+    <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
+    <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
+
+    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/equipment/picture_scrolls/js/picture_scrolls.js" defer></script> -->
+    <script type="text/javascript" src="./js/picture_scrolls.js" defer></script>
 
 </body>
 </html>
+
+<!-- TODO -->
+<!--
+
+-->
