Added more content to weapon_tables.html.

--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -327,7 +327,66 @@
                 <!-- ==========
                 Table Data
                 ========== -->
-                
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Final Blow)</span></td>
+                    <td>223</td>
+                    <td>273</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (High Attack)</span></td>
+                    <td>22</td>
+                    <td>24</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Mid Attack)</span></td>
+                    <td>24</td>
+                    <td>26</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Low Attack)</span></td>
+                    <td>23</td>
+                    <td>25</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Grapple)</span></td>
+                    <td>223</td>
+                    <td>273</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Active Skill)</span></td>
+                    <td>28</td>
+                    <td>30</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Melee Kill)</span></td>
+                    <td>223</td>
+                    <td>293</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Life Drain (Strong Attack)</span></td>
+                    <td>27</td>
+                    <td>30</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-exotic-text-color">Life Drain (Quick Attack)</span></td>
+                    <td>24</td>
+                    <td>26</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-exotic-text-color">Life Drain (Melee Attack)</span></td>
+                    <td>22</td>
+                    <td>24</td>
+                    <td>Yes</td>
+                </tr>
             </table>
         </div>
     </section>
