Added more content to cores_attributes and weapon_tables .html files. Added new images to /temper_tables/img/.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -309,7 +309,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -802,7 +802,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1027,7 +1027,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1090,7 +1090,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1169,7 +1169,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1224,7 +1224,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1279,7 +1279,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1346,7 +1346,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
@@ -1405,7 +1405,7 @@
                     <th><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fa7e38] to-[#fdd365]">Rank 30</span></th>
                     <th>
                         <div class="flex flex-col items-center gap-1">
-                            Possible Inheritable ?
+                            Inheritable ?
                             <img src="./img/inherit_icon.png" alt="inherit icon">
                         </div>
                     </th>
