--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -278,7 +278,12 @@
                 <tr>
                     <th rowspan="2">Attribute</th>
                     <th colspan="2">Familiarity</th>
-                    <th rowspan="2">Inheritable?</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
                 <tr>
                     <th>0</th>
@@ -317,7 +322,12 @@
                 <tr>
                     <th rowspan="2">Attribute</th>
                     <th colspan="2">Familiarity</th>
-                    <th rowspan="2">Inheritable?</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
                 </tr>
                 <tr>
                     <th>0</th>
