--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
         lg:h-screen lg:mt-0 lg:mb-0">
         
         <!-- Nioh 2 Card -->
-        <a href="./nioh2/nioh2.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
+        <a href="./nioh2/nioh2.html" class="group mask w-fit flex flex-col items-center bg-white border-2 border-black hover:border-sky-500">
             <img src="./img/nioh2_card.png" alt="Nioh 2 card image">
-            <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Nioh 2 Wiki</span>
+            <span class="my-4 font-bold text-xl text-stone-700 group-hover:text-sky-500">Nioh 2 Wiki</span>
         </a>
 
         <!-- Wo Long Card -->
-        <a href="./wolong/wolong.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
+        <a href="./wolong/wolong.html" class="group mask w-fit flex flex-col items-center bg-white border-2 border-black hover:border-sky-500">
             <img src="./img/wolong_card_2.png" alt="Wo Long: Fallen Dynasty card image">
-            <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
+            <span class="my-4 font-bold text-xl text-stone-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
         </a>
 
         <!-- Rise of the Ronin Card -->
-        <a href="" class="group mask w-fit flex flex-col items-center bg-white border border-black">
+        <a href="" class="group mask w-fit flex flex-col items-center bg-white border-2 border-black hover:border-sky-500">
             <img src="./img/rotr_card.png" alt="Rise of Ronin card image">
-            <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Rise of the Ronin Wiki</span>
+            <span class="my-4 font-bold text-xl text-stone-700 group-hover:text-sky-500">Rise of the Ronin Wiki</span>
         </a>
     </section>
 </body>
