--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -231,6 +231,7 @@
     <section class="w-full my-12 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-6">
             <h1 class="text-yellow-400 text-5xl md:text-6xl p-2 text-center">Melee Weapon Temper Tables</h1>
+            <img src="./img/weapons_icon.png" alt="Weapons icon">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
         </div>
     </section>
@@ -267,6 +268,55 @@
                 do not conflict with each other. 
             </p>
 
+
+
+            <!-- ========== ========== ==========
+            TEMPLATE
+            
+
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Amrita</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+
+                <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned</td>
+                    <td>1.5%</td>
+                    <td>1.7%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned vs. Humans</td>
+                    <td>1.9%</td>
+                    <td>2.1%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned vs. Yokai</td>
+                    <td>1.9%</td>
+                    <td>2.1%</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+            ========== ========== ========== -->
+
+
+
             <!-- ==========
             Random Drop / Forge Only
             ========== -->
@@ -293,7 +343,7 @@
                 <!-- ==========
                 Table Data
                 ========== -->
-                <tr class="even:bg-dark-gray-2">
+                <tr class="bg-dark-gray-2">
                     <td>
                         <span class="text-exotic-text-color">Imbue Purity</span>
                     </td>
@@ -301,7 +351,7 @@
                     <td>8</td>
                     <td>No</td>
                 </tr>
-                <tr class="even:bg-dark-gray-2">
+                <tr class="">
                     <td>
                         <span class="text-exotic-text-color">Imbue Corruption</span>
                     </td>
@@ -310,6 +360,7 @@
                     <td>No</td>
                 </tr>
             </table>
+
 
             <!-- ==========
             Life Drain
@@ -395,6 +446,324 @@
                     <td><span class="text-exotic-text-color">Life Drain (Melee Attack)</span></td>
                     <td>22</td>
                     <td>24</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+
+
+            <!-- ==========
+            Break
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Break</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Attack Break</td>
+                    <td>17.9%</td>
+                    <td>22.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[Strong / Quick] Attack Break</td>
+                    <td>17.9%</td>
+                    <td>22.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Active Skill Break</td>
+                    <td>17.9%</td>
+                    <td>22.9%</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+
+
+            <!-- ==========
+            Imbue Element
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Imbue Element</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Imbue Fire</span></td>
+                    <td>13</td>
+                    <td>15</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Imbue Water</span></td>
+                    <td>13</td>
+                    <td>15</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Imbue Lightning</span></td>
+                    <td>13</td>
+                    <td>15</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Imbue Poison</span></td>
+                    <td>13</td>
+                    <td>15</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Imbue Paralysis</span></td>
+                    <td>13</td>
+                    <td>15</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+
+
+            <!-- ==========
+            Amrita
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Amrita</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned</td>
+                    <td>1.5%</td>
+                    <td>1.7%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned vs. Humans</td>
+                    <td>1.9%</td>
+                    <td>2.1%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Amrita Earned vs. Yokai</td>
+                    <td>1.9%</td>
+                    <td>2.1%</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+
+
+            <!-- ==========
+            Attack Ki Consumption
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Attack Ki Consumption</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Attack Ki Consumption</td>
+                    <td>-7.2%</td>
+                    <td>-7.4%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[Strong / Quick] Attack Ki Consumption</td>
+                    <td>-7.2%</td>
+                    <td>-7.4%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Active Skill Ki Consumption</td>
+                    <td>-6.7%</td>
+                    <td>-6.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Active Skill Ki Consumption</td>
+                    <td>-8.2%</td>
+                    <td>-8.4%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Melee Attack Ki Consumption</span></td>
+                    <td>-5.4%</td>
+                    <td>-5.6%</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+
+
+            <!-- ==========
+            Guard Ki Consumption
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Guard Ki Consumption</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Guard Ki Consumption</td>
+                    <td>-8.2%</td>
+                    <td>-8.4%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Guard Ki Consumption (Critical)</td>
+                    <td>-14.4%</td>
+                    <td>-14.9</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Guard Ki Consumption</span></td>
+                    <td>-7.7%</td>
+                    <td>-7.9%</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
+
+
+            <!-- ==========
+            Ki Damage
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Ki Damage</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>Strong Attack Ki Damage</td>
+                    <td>9.9%</td>
+                    <td>12.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Active Skill Ki Damage</td>
+                    <td>9.9%</td>
+                    <td>12.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Active Skill Ki Damage</td>
+                    <td>4.9%</td>
+                    <td>5.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Melee Ki Damage</span></td>
+                    <td>8.9%</td>
+                    <td>11.9%</td>
                     <td>Yes</td>
                 </tr>
             </table>
