Added more content to weapon_tables.html.

--- a/nioh2/tools/temper_tables/weapon_tables.html
+++ b/nioh2/tools/temper_tables/weapon_tables.html
@@ -767,6 +767,138 @@
                     <td>Yes</td>
                 </tr>
             </table>
+
+
+            <!-- ==========
+            Damage
+            ========== -->
+            <h3 class="py-4 text-2xl text-yellow-400 font-extrabold text-center">Damage</h3>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+
+                <!-- ==========
+                Header
+                ========== -->
+                <tr>
+                    <th rowspan="2">Attribute</th>
+                    <th colspan="2">Familiarity</th>
+                    <th rowspan="2">
+                        <div class="flex flex-col items-center gap-1">
+                            Inheritable ?
+                            <img src="./img/inherit_icon.png" alt="inherit icon">
+                        </div>
+                    </th>
+                </tr>
+                <tr>
+                    <th>0</th>
+                    <th>999</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Melee Damage</span></td>
+                    <td>4.0%</td>
+                    <td>4.2%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Melee Damage (Critical)</td>
+                    <td>9.9%</td>
+                    <td>10.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Melee Damage (Unscathed)</td>
+                    <td>2.9%</td>
+                    <td>3.2%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Melee Damage vs. [Human / Yokai]</td>
+                    <td>2.9%</td>
+                    <td>3.2%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Backstab Damage</td>
+                    <td>7.9%</td>
+                    <td>10.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Active Skill Damage</td>
+                    <td>3.9%</td>
+                    <td>4.3%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Active Skill Damage</td>
+                    <td>4.9%</td>
+                    <td>5.9%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[High / Mid / Low] Attack Damage</td>
+                    <td>3.9%</td>
+                    <td>4.3%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>[Strong / Quick] Attack Damage</td>
+                    <td>3.9%</td>
+                    <td>4.3%</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-exotic-text-color">Attack Bonus [STAT]</span></td>
+                    <td>A-</td>
+                    <td>A+</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Damage Bonus (Equipment Lightness)</span></td>
+                    <td>AA-</td>
+                    <td>AA</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-rare-text-color">Attack Bonus (Amrita Guage)</span></td>
+                    <td>B+</td>
+                    <td>A</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-uncommon-text-color">Damage Bonus (Unarmored)</span></td>
+                    <td>A-</td>
+                    <td>A</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-uncommon-text-color">Damage Bonus (Agility)</span></td>
+                    <td>A-</td>
+                    <td>A</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-uncommon-text-color">Damage Bonus (Enemies Defeated)</span></td>
+                    <td>A-</td>
+                    <td>A</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><span class="text-uncommon-text-color">Damage Bonus (Familiarity)</span></td>
+                    <td>A-</td>
+                    <td>A</td>
+                    <td>Yes</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Damage Vs. Revenants</td>
+                    <td>14.9%</td>
+                    <td>17.9%</td>
+                    <td>Yes</td>
+                </tr>
+            </table>
         </div>
     </section>
 
@@ -818,8 +950,8 @@
     <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/js/top_button.js" defer></script>
     <!-- <script type="text/javascript" src="../../js/top_button.js" defer></script> -->
 
-    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/equipment/picture_scrolls/js/picture_scrolls.js" defer></script> -->
-    <script type="text/javascript" src="./js/picture_scrolls.js" defer></script>
+    <!-- <script type="text/javascript" src="https://liukang1080.github.io/gamewiki/nioh2/tools/temper_tables/js/weapon_tables.js" defer></script> -->
+    <script type="text/javascript" src="./js/weapon_tables.js" defer></script>
 
 </body>
 </html>
