--- a/nioh2/tools/temper_tables/temper_tables_index.html
+++ b/nioh2/tools/temper_tables/temper_tables_index.html
@@ -251,7 +251,7 @@
                 Melee Temper Table (Button 1)
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="./weapon_tables.html">
                     <img class="" src="./img/weapons_icon.png" alt="Weapons icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Melee Temper Table</span>
