--- a/nioh2/tools/temper_tables/temper_tables_index.html
+++ b/nioh2/tools/temper_tables/temper_tables_index.html
@@ -261,7 +261,7 @@
                 Ranged Temper Table (Button 2)
                 ========== -->
                 <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
-                    href="">
+                    href="./ranged_tables.html">
                     <img class="" src="./img/ranged_weapons_icon.png" alt="Ranged Weapons icon">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Ranged Temper Table</span>
